Tweaking things (like text alignment) at the boot splash screen.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/remaster_iso/porteus.cfg
+++ b/remaster_iso/porteus.cfg
@@ -35,7 +35,7 @@ MENU VSHIFT 5
 	menu color msg07	37;40      #90ffffff #00000000 std
 
 LABEL razor
-MENU LABEL Default desktop (Razor)
+MENU LABEL Razor desktop
 KERNEL vmlinuz
 APPEND initrd=initrd.xz changes=/porteus 
 TEXT HELP
@@ -46,7 +46,7 @@ TEXT HELP
 ENDTEXT
 
 LABEL fresh
-MENU LABEL Always Fresh
+MENU LABEL No Persistent Storage
 KERNEL vmlinuz
 APPEND initrd=initrd.xz nomagic base_only norootcopy 
 TEXT HELP
@@ -74,10 +74,10 @@ KERNEL vmlinuz
 APPEND initrd=initrd.xz 3 
 TEXT HELP
     Boot Byzantium into text mode.
-    Everything will be configured
-    and will work normally, but you
-    will only have a shell and not
-    a desktop.
+    Everything will work normally,
+    but you will only have a shell
+    and not a desktop. Ideal for
+    machines without much RAM.
 ENDTEXT
 
 LABEL pxe-boot
@@ -106,7 +106,7 @@ TEXT HELP
 ENDTEXT
 
 LABEL hd
-MENU LABEL Boot from the first hd
+MENU LABEL Boot from first HD
 COM32 chain.c32
 APPEND hd0 1
 TEXT HELP
