Added directives to the captiveportal.conf file so that CherryPy will know about and automatically serve stuff out of /srv/captiveportal/[cs,j]s.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/captive_portal/etc/captiveportal/captiveportal.conf
+++ b/captive_portal/etc/captiveportal/captiveportal.conf
@@ -1,3 +1,10 @@
 [/]
 tools.staticdir.root = "/srv/captiveportal"
 
+[/css]
+tools.staticdir.on = True
+tools.staticdir.dir = "css"
+
+[/js]
+tools.staticdir.on = True
+tools.staticdir.dir = "js"
