Adding the img dir

--- a/captive_portal/etc/captiveportal/captiveportal.conf
+++ b/captive_portal/etc/captiveportal/captiveportal.conf
@@ -8,3 +8,7 @@ tools.staticdir.dir = "css"
 [/js]
 tools.staticdir.on = True
 tools.staticdir.dir = "js"
+
+[/img]
+tools.staticdir.on = True
+tools.staticdir.dir = "img"
