--- a/porteus/avahi/etc/avahi/avahi-daemon.conf
+++ b/porteus/avahi/etc/avahi/avahi-daemon.conf
@@ -25,7 +25,7 @@ domain-name=local
 use-ipv4=yes
 use-ipv6=yes
 #allow-interfaces=eth0
-#deny-interfaces=eth1
+deny-interfaces=usb0,sm0
 #check-response-ttl=no
 #use-iff-running=no
 enable-dbus=warn
