Figured out an almost complete mod_proxy_html configuration to make Groundstation work through Apache.  I got it from here:
http://www.askapache.com/hosting/reverse-proxy-apache.html

Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/apache/etc/httpd/extra/proxy-html.conf
+++ b/porteus/apache/etc/httpd/extra/proxy-html.conf
@@ -91,10 +91,6 @@ ProxyHTMLEvents	onclick ondblclick onmousedown onmouseup \
 
 ProxyRequests off
 
-# QwebIRC
-ProxyPass /chat/ http://localhost:8989/
-ProxyPassReverse /chat/ http://localhost:8989/
-
 # Etherpad-Lite
 ProxyPass /pad/ http://localhost:9001/
 ProxyPassReverse /pad/ http://localhost:9001/
@@ -102,4 +98,16 @@ ProxyPassReverse /pad/ http://localhost:9001/
 # olsrd JSON port.
 ProxyPass /olsrd/ http://localhost:9090/
 ProxyPassReverse /olsrd/ http://localhost:9090/
+
+# Groundstation.
+LoadFile /usr/lib/libxml2.so
+ProxyPass /microblog/ http://localhost:9005/
+ProxyHTMLURLMap http://localhost:9005/ /microblog/
+<location /microblog/ >
+    ProxyPassReverse /
+    SetOutputFilter proxy-html
+    ProxyHTMLURLMap / /microblog/
+    ProxyHTMLURLMap /microblog/ /microblog/
+    RequestHeader unset Accept-Encoding
+</location>
 
