Updated Avahi .service files for the new dynamic service directory.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/ngircd/ngircd.service
+++ b/porteus/ngircd/ngircd.service
@@ -3,11 +3,11 @@
 <service-group>
 	<name replace-wildcards="yes">IRC server running on %h.</name>
 	<service>
-		<type>_irc._tcp</type>
+		<type>_irc.__byz__._tcp</type>
 		<port>6667</port>
 	</service>
 	<service>
-		<type>_ircs._tcp</type>
+		<type>_ircs.__byz__._tcp</type>
 		<port>6697</port>
 	</service>
 </service-group>
