--- a/porteus/etherpad-lite/etherpad-lite.service
+++ b/porteus/etherpad-lite/etherpad-lite.service
@@ -3,7 +3,7 @@
 <service-group>
 	<name replace-wildcards="yes">Etherpad-Lite running on %h</name>
 	<service>
-		<type>_http._tcp</type>
+		<type>_etherpad.__byz__._tcp</type>
 		<port>9001</port>
 	</service>
 </service-group>
