Updating more configuration directives because so much has changed since the last release of ngircd.  Some of them default to "not for the better."
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/ngircd/ngircd.conf
+++ b/porteus/ngircd/ngircd.conf
@@ -130,7 +130,7 @@
 
 	# Set this hostname for every client instead of the real one.
 	# Use %x to add the hashed value of the original hostname.
-	;CloakHost = cloaked.host
+	CloakHost = byzantium.mesh
 
 	# Use this hostname for hostname cloaking on clients that have the
 	# user mode "+x" set, instead of the name of the server.
@@ -149,7 +149,7 @@
 	;ConnectIPv4 = yes
 
 	# Do any DNS lookups when a client connects to the server.
-	;DNS = yes
+	DNS = no
 
 	# Do IDENT lookups if ngIRCd has been compiled with support for it.
 	# Users identified using IDENT are registered without the "~" character
@@ -158,7 +158,7 @@
 
 	# Enhance user privacy slightly (useful for IRC server on TOR or I2P)
 	# by censoring some information like idle time, logon time, etc.
-	;MorePrivacy = no
+	MorePrivacy = yes
 
 	# Normally ngIRCd doesn't send any messages to a client until it is
 	# registered. Enable this option to let the daemon send "NOTICE AUTH"
@@ -217,7 +217,7 @@
 	# be used. (Default: not set)
 	;WebircPassword = xyz
 
-;[SSL]
+[SSL]
 	# SSL-related configuration options. Please note that this section
 	# is only available when ngIRCd is compiled with support for SSL!
 	# So don't forget to remove the ";" above if this is the case ...
