Updated porteus.cfg file for latest release.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/remaster_iso/porteus.cfg
+++ b/remaster_iso/porteus.cfg
@@ -2,7 +2,7 @@ PROMPT 0
 TIMEOUT 90
 UI vesamenu.c32
 DEFAULT razor
-MENU TITLE Byzantium Linux v0.3.2a
+MENU TITLE Byzantium Linux v0.5b
 
 MENU WIDTH 32
 MENU MARGIN 2
