Added an icon to the .desktop file.
Added a line to allow the guest user to run the reconfiguration script
without having to supply a password.

Took a blank line out of the "Will it blend?" script.

Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/home/guest/retry.desktop
+++ b/porteus/home/guest/retry.desktop
@@ -4,5 +4,5 @@ Encoding=UTF-8
 Name=Try again?
 Comment=Attempt to configure this node again?
 Exec=sudo /usr/local/bin/reconfigure.sh
-Icon=application.png
+Icon=/usr/share/pixmaps/easypaint_64.png
 Terminal=false
