Added cheatcode 'noauto' to prevent automount of hard drives during boot.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/remaster_iso/porteus.cfg
+++ b/remaster_iso/porteus.cfg
@@ -37,7 +37,7 @@ MENU VSHIFT 5
 LABEL razor
 MENU LABEL Razor desktop
 KERNEL vmlinuz
-APPEND initrd=initrd.xz changes=/porteus 
+APPEND initrd=initrd.xz changes=/porteus noauto 
 TEXT HELP
     Boot Byzantium into the default
     desktop. Automatically configure
@@ -48,7 +48,7 @@ ENDTEXT
 LABEL fresh
 MENU LABEL No Persistent Storage
 KERNEL vmlinuz
-APPEND initrd=initrd.xz nomagic base_only norootcopy 
+APPEND initrd=initrd.xz nomagic base_only norootcopy noauto 
 TEXT HELP
     Boot into the default desktop but
     don't load any saved changes (if
@@ -59,7 +59,7 @@ ENDTEXT
 LABEL copy2ram
 MENU LABEL Copy To RAM
 KERNEL vmlinuz
-APPEND initrd=initrd.xz copy2ram 
+APPEND initrd=initrd.xz copy2ram noauto 
 TEXT HELP
     Boot into the default desktop but
     first load everything into RAM.
@@ -71,7 +71,7 @@ ENDTEXT
 LABEL text
 MENU LABEL Text mode
 KERNEL vmlinuz
-APPEND initrd=initrd.xz 3 
+APPEND initrd=initrd.xz 3 noauto 
 TEXT HELP
     Boot Byzantium into text mode.
     Everything will work normally,
@@ -83,7 +83,7 @@ ENDTEXT
 LABEL pxe-boot
 MENU LABEL PXE server
 KERNEL vmlinuz
-APPEND initrd=initrd.xz autoexec=pxe-boot~& 
+APPEND initrd=initrd.xz noauto autoexec=pxe-boot~& 
 TEXT HELP
     Boot Byzantium normally but also
     initialize a PXE boot server.
