Updated desktop config file for new background.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/home/guest/.config/razor/desktop.conf
+++ b/porteus/home/guest/.config/razor/desktop.conf
@@ -7,6 +7,6 @@ update_info=razor-0.5.upd:razor_0.4.1-0.5.0
 [razor]
 screens\size=1
 screens\1\desktops\1\wallpaper_type=pixmap
-screens\1\desktops\1\wallpaper=/usr/share/wallpapers/nstb.jpg
+screens\1\desktops\1\wallpaper=/usr/share/wallpapers/sleep_deprivation.png
 screens\1\desktops\1\keep_aspect_ratio=false
 screens\1\desktops\size=1
