--- a/qwebirc/qwebirc.service
+++ b/qwebirc/qwebirc.service
@@ -2,8 +2,12 @@
 <!DOCTYPE service-group SYSTEM "avahi-service.dtd">
 <service-group>
 	<name replace-wildcards="yes">Web chat client on %h</name>
+    <service>
+		<type>__byz._tcp</type>
+		<port></port>
+	</service>
 	<service>
-		<type>_http.__byz__._tcp</type>
+		<type>_http._tcp</type>
 		<port>9001</port>
 	</service>
 </service-group>
